--- a/UI1.ui
+++ b/UI1.ui
@@ -6,22 +6,34 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>781</width>
     <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Графический редактор</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
    <widget class="QLabel" name="lbl_image">
     <property name="geometry">
      <rect>
-      <x>4</x>
-      <y>5</y>
-      <width>791</width>
-      <height>541</height>
+      <x>-6</x>
+      <y>-5</y>
+      <width>801</width>
+      <height>551</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
     <property name="text">
      <string/>
@@ -36,7 +48,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>781</width>
      <height>26</height>
     </rect>
    </property>
@@ -89,7 +101,11 @@
    <addaction name="menu_help"/>
    <addaction name="menu_options"/>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QStatusBar" name="statusbar">
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
+  </widget>
   <action name="action_program">
    <property name="text">
     <string>О программе</string>
